# gtestmock-cmake-template

./: CMakeLists.txt  README.md  index.html  install.sh  setup.bat  setup.sh
Tools/: gcovr
Tools/jenkins/: config.xml  runtests.sh  setup.bat  setup.sh
lib/googletest-release-1.7.0/make/: sample1_unittest
src/: Counter.cpp  Counter.hpp  SquareRoot.c
test/: Counter_Tests.cpp  SquareRoot_Tests.cpp  gtest_main.cpp
